<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.AppBarOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_middle">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/spacing_middle"
                    android:paddingTop="@dimen/spacing_middle">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_middle"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/spacing_xxlarge"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_medium"
                        android:paddingRight="@dimen/spacing_medium">

                        <View
                            android:layout_width="@dimen/spacing_large"
                            android:layout_height="wrap_content" />

                        <ImageView
                            android:layout_width="@dimen/spacing_xxlarge"
                            android:layout_height="@dimen/spacing_xxlarge"
                            android:src="@mipmap/ic_launcher_round" />

                        <View
                            android:layout_width="@dimen/spacing_large"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/app_name"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                            <TextView
                                android:id="@+id/textViewProjectPage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/github_project_link_text"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/spacing_xxlarge"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_medium"
                        android:paddingRight="@dimen/spacing_medium">

                        <View
                            android:layout_width="@dimen/spacing_mlarge"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@android:color/transparent"
                            android:tint="@color/grey_40"
                            app:srcCompat="@drawable/ic_info_outline" />

                        <View
                            android:layout_width="@dimen/spacing_mlarge"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_version"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                app:fontFamily="sans-serif-medium" />

                            <TextView
                                android:id="@+id/textViewVersion"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayoutLicense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/spacing_xxlarge"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_medium"
                        android:paddingRight="@dimen/spacing_medium">

                        <View
                            android:layout_width="@dimen/spacing_mlarge"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@android:color/transparent"
                            android:tint="@color/grey_40"
                            app:srcCompat="@drawable/ic_book" />

                        <View
                            android:layout_width="@dimen/spacing_mlarge"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_license"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/spacing_middle"
                    android:paddingTop="@dimen/spacing_middle">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_middle"
                        android:layout_marginLeft="@dimen/spacing_mlarge"
                        android:layout_marginRight="@dimen/spacing_mlarge"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:text="@string/text_author"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        app:fontFamily="sans-serif-medium" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/spacing_xxlarge"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_medium"
                        android:paddingRight="@dimen/spacing_medium">

                        <View
                            android:layout_width="@dimen/spacing_mlarge"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@android:color/transparent"
                            android:tint="@color/grey_40"
                            app:srcCompat="@drawable/ic_person" />

                        <View
                            android:layout_width="@dimen/spacing_mlarge"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/app_author_name"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                app:fontFamily="sans-serif-medium" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/app_author_country"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>

